--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec 30 04:05:50 2004  Tim Janik  <timj@gtk.org>
+
+	* gslloader.c (gsl_wave_dsc_free): removed bogus g_strfreev().
+
 Wed Dec 29 22:24:51 2004 Stefan Westerfeld <stefan@space.twc.de>
 
 	* gslloader.h:
