cleanups. implemented GslVorbis1Handle which can be used to store the
Fri Dec 31 01:40:33 2004  Tim Janik  <timj@gtk.org>

        * gsldatahandle-vorbis.c: cleanups. implemented GslVorbis1Handle which
        can be used to store the compressed Ogg/Vorbis data of an Ogg/Vorbis
        GslDataHandle. this uses GslVorbisCutter internally to properly rewrite
        the Ogg stream.

        * gslvorbis-cutter.[hc]: support non-cutting mode. support specification
        of the logical bitstream to process by setting a serialno filter.

        * tests/cutvorbis.c: added option handling for -s,-p-k,-S.

        * gslloader-bsewave.c: allow loading of waves with an empty chunk list.

        * gslloader.[hc]: support loading of waves with empty chunk list.

        * gslcommon.c (gsl_error_from_errno): handle ENODATA.

svn path=/trunk/; revision=3037

--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -8,6 +8,8 @@ Fri Dec 31 01:40:33 2004  Tim Janik  <timj@gtk.org>
 	* gslvorbis-cutter.[hc]: support non-cutting mode. support specification
 	of the logical bitstream to process by setting a serialno filter.
 
+	* tests/cutvorbis.c: added option handling for -s,-p-k,-S.
+
 	* gslloader-bsewave.c: allow loading of waves with an empty chunk list.
 
 	* gslloader.[hc]: support loading of waves with empty chunk list.
