--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Fri Dec 31 13:44:16 2004  Tim Janik  <timj@gtk.org>
+
+	* gsldatahandle.c:
+	(gsl_wave_handle_new_zoffset): 
+	(gsl_wave_handle_new): provide dhandle xinfos without creating
+	an extra data handle.
+
 Fri Dec 31 13:32:47 2004  Tim Janik  <timj@gtk.org>
 
 	* bseutils.c (bse_xinfos_dup_consolidated): duplicate xinfo array and
