--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,12 @@
+Fri Dec 31 14:19:21 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* standardguspatchenvelope.idl:
+	* standardguspatchenvelope.cc: Added preliminary implementation of the
+	envelope for the GUS Patches. This version doesn't yet use the data
+	from the wave chunks. However, it eliminates clicks at the start/end
+	by adding a small ramp, and already has mostly the interface that the
+	final version will have.
+
 Fri Dec 24 22:58:11 2004  Tim Janik  <timj@gtk.org>
 
 	* standardsaturator.idl: 
