--- a/TODO
+++ b/TODO
@@ -730,5 +730,6 @@ Misc Buglets/Feature Requests:
    libtool
  - the midi importer doesn't create a master bus
  - silencing out an instrument (in drum maps) should be easier
+ - bse_ftoi/bse_dtoi on AMD64 from glibc source
 
 vim:set ts=8 sts=2 sw=2:
