removed bit_depth, osc_freq and mix_freq from GslDataHandleSetup, removed
Fri Dec 31 16:39:21 2004  Tim Janik  <timj@gtk.org>

        * gsldatahandle.[hc]: removed bit_depth, osc_freq and mix_freq from
        GslDataHandleSetup, removed gsl_data_handle_override(). these
        values are accessible throuzgh accessors and stored in xinfos now.

        * gslloader-bsewave.c: provide osc-freq via xinfo.

        * gsldatahandle-vorbis.c:
        * gsldatahandle-mad.c: set bit-depth, osc-freq and mix-freq via xinfos.

svn path=/trunk/; revision=3045

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 FIXME(urgent):
+- copy xinfos in set_dhandle_from_temporary
+- nuke data handle qdata
 - fix serialno generation for ogg/vorbis encoder and cutter
 - fix bsewavetool oggenc saving osc_freq, not midi_note
 - consolidate bsewave tokens
