--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jan  1 21:20:03 2005  Tim Janik  <timj@gtk.org>
+
+	* zintern/wave-mono.bse: CVS copied from mono-wave.bse.
+
 Fri Dec 31 16:39:21 2004  Tim Janik  <timj@gtk.org>
 
 	* gsldatahandle.[hc]: removed bit_depth, osc_freq and mix_freq from
