--- a/docs/architecture.texi
+++ b/docs/architecture.texi
@@ -3,12 +3,13 @@
 @settitle BEAST Architecture
 @footnotestyle end
 @c %**end of header
-@c revision-date: $Id: architecture.texi,v 1.3 2004/12/17 15:34:28 timj Exp $
+@c revision-date: $Id: architecture.texi,v 1.4 2005/01/02 12:29:35 stw Exp $
 
 @include texiutils.texi
 
 @doctitle @beast Architecture
 @docauthor Tim Janik
+@docauthor Stefan Westerfeld
 
 @center @revision{Document revised:}
 
@@ -67,5 +68,50 @@ audio synthesis package and related components.
 @item Standard synthesis modules
 @end itemize
 @end enumerate
+
+@chapter Samples and Wave Files
+
+Sample Data is organized at three levels:
+
+@enumerate
+@item Wave Chunks - a chunk contains one sample
+@item Waves - multiple chunks can be put into a wave; this allows storing different samples
+              which should be played for different notes
+@item Wave Libraries - multiple waves can be put into a wave library
+@end enumerate
+
+@section Extra Information (XInfo Strings) for Wave Files
+
+@subsection Wave Chunk specific XInfos
+
+@itemize
+@item @strong{loop-type} -
+      can be set to indicate that the sample should be looped; possible values are
+@enumerate
+  @item "none" - no loop
+  @item "jump" - plays from loop start to loop end, and jumps back to loop start
+  @item "ping-pong" - plays from loop start to loop end and then backwards from loop end to loop start
+@end enumerate
+@item @strong{loop-start} -
+      the offset in samples for the start of the loop
+@item @strong{loop-end} -
+      the offset in samples for the end of the loop
+@item @strong{loop-count} -
+      how often the loop should be repeated
+@item @strong{gus-patch-envelope} -
+      contains the envelope points from the GUS Patch envelope
+@end itemize
+
+@subsection Wave specific XInfos
+
+@itemize
+@item @strong{play-type} -
+      can be "mono-wave" for mono wave files or "gus-mono-wave" for GUS Patches (which need a special envelope)
+@end itemize
+
+@subsection Wave Library specific XInfos
+
+There are currently no XInfos defined for Wave Libraries, as Wave Libraries are not yet
+supported (but planned).
 
 @bye
