--- a/docs/architecture.texi
+++ b/docs/architecture.texi
@@ -3,7 +3,7 @@
 @settitle BEAST Architecture
 @footnotestyle end
 @c %**end of header
-@c revision-date: $Id: architecture.texi,v 1.5 2005/01/06 18:08:54 timj Exp $
+@c revision-date: $Id: architecture.texi,v 1.6 2005/01/06 22:12:09 timj Exp $
 
 @include texiutils.texi
 
@@ -115,8 +115,8 @@ Sample Data is organized at three levels:
 	Indicates the set of required play back facilities for a wave.
 	Supported values are:
 @enumerate
-  @item mono-wave - for mono wave files,
-  @item gus-mono-wave - for GUS Patches (which need a special envelope).
+  @item wave-mono - for mono wave files,
+  @item gus-patch - for GUS Patches (which need a special envelope).
 @end enumerate
 @end itemize
 
