--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,10 @@
+Fri Jan  7 00:44:24 2005  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* standardguspatchenvelope.cc: Implemented chunk specific envelope
+	code, inspired by timidity. Currently, its not yet finished: some
+	envelopes from the FreePats set are treated the way I think they are
+	correct (Piano), some are not (FretlessBass).
+
 Sun Jan  2 15:30:19 2005  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* standardguspatchenvelope.idl:
