--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Jan  7 02:05:35 2005  Tim Janik  <timj@gtk.org>
+
+	* tools/bwtwave.cc:
+	* tools/bsewavetool.cc: use gsl_vorbis_make_serialno() to generate
+	deterministic serialnos. 
+
 Fri Jan  7 01:13:49 2005  Tim Janik  <timj@gtk.org>
 
 	* tools/bsewavetool.cc: print compression ratio for oggenc.
