--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jan  8 04:43:00 2005  Tim Janik  <timj@gtk.org>
+
+	* bseloader-guspatch.cc: CVS copied from gslloader-pat.cc.
+
 Fri Jan  7 02:53:05 2005  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* gslloader-pat.cc: Reimplemented data_offset storing in a way that is
