--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,14 @@
+Thu Jan 13 21:35:38 2005  Tim Janik  <timj@gtk.org>
+
+	* gsldatautils.[hc]: added gsl_data_make_fade_ramp() and
+	gsl_data_clip_sample().
+
+	* bseenums.[hc]: turn FILE_EMPTY into its own error code, added
+	BSE_ERROR_DATA_UNMATCHED.
+
+	* gsldatahandle.c (insert_handle_close): don't free xinfo pointer
+	which we merely copied (but didn't deep-duplicate) upon open.
+
 Wed Jan 12 02:08:21 2005  Tim Janik  <timj@gtk.org>
 
 	* bsecore.idl: added part link structure and sequence.
